New Depsgraph - Shrinkwrap crashes blender #52823

Closed
opened 2017-09-19 02:07:41 +02:00 by Carlo Andreacchio · 11 comments

System Information
Ubuntu 17.04 GTX 1080

Blender Version
Broken: bb4a12914f

Short description of error
Shrinkwraps sometimes crash blender

Exact steps for others to reproduce the error

  1. open attached blend file with new depsgraph enabled
  2. middle mouse rotate about 5 degrees
  3. shift d a few times
  4. should crash
    bugShrinkwrap2.blend
**System Information** Ubuntu 17.04 GTX 1080 **Blender Version** Broken: bb4a12914fa **Short description of error** Shrinkwraps sometimes crash blender **Exact steps for others to reproduce the error** 1. open attached blend file with new depsgraph enabled 2. middle mouse rotate about 5 degrees 3. shift d a few times 4. should crash [bugShrinkwrap2.blend](https://archive.blender.org/developer/F818110/bugShrinkwrap2.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Cant reproduce on locally built blender, only blender from buildbot... backtrace is as follows:

/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(BLI_system_backtrace+0x20) [0x1a72fe0]
/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x107db08]
/lib/x86_64-linux-gnu/libc.so.6(+0x357f0) [0x7ffff63ac7f0]
/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x17693c7]
/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(bvhtree_from_mesh_looptri+0x180) [0x176b150]
/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(shrinkwrapModifier_deform+0x50d) [0x189365d]
/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x174bc28]
/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x174cdec]
/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(makeDerivedMesh+0x70) [0x174cef0]
/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(BKE_object_handle_data_update+0xf5) [0x183d525]
/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(BKE_object_eval_uber_data+0x34) [0x183da64]
/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x1a87306]
/home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x1a7326f]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x76da) [0x7ffff79b86da]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x5f) [0x7ffff647fd7f]

Cant reproduce on locally built blender, only blender from buildbot... backtrace is as follows: ``` /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(BLI_system_backtrace+0x20) [0x1a72fe0] /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x107db08] /lib/x86_64-linux-gnu/libc.so.6(+0x357f0) [0x7ffff63ac7f0] /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x17693c7] /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(bvhtree_from_mesh_looptri+0x180) [0x176b150] /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(shrinkwrapModifier_deform+0x50d) [0x189365d] /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x174bc28] /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x174cdec] /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(makeDerivedMesh+0x70) [0x174cef0] /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(BKE_object_handle_data_update+0xf5) [0x183d525] /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender(BKE_object_eval_uber_data+0x34) [0x183da64] /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x1a87306] /home/user/blender/blender-2.79-bb4a12914fa-linux-glibc219-x86_64/blender() [0x1a7326f] /lib/x86_64-linux-gnu/libpthread.so.0(+0x76da) [0x7ffff79b86da] /lib/x86_64-linux-gnu/libc.so.6(clone+0x5f) [0x7ffff647fd7f] ```

managed to get it to crash on the locally built blender by tabbing in and out of the base mesh a few times:

bpy.ops.object.editmode_toggle()  # Operator
bpy.ops.object.editmode_toggle()  # Operator
bpy.ops.object.editmode_toggle()  # Operator
bpy.ops.object.editmode_toggle()  # Operator
bpy.ops.object.editmode_toggle()  # Operator
bpy.ops.mesh.select_all(action='TOGGLE')  # Operator
bpy.ops.mesh.select_all(action='TOGGLE')  # Operator
bpy.ops.mesh.select_all(action='TOGGLE')  # Operator
bpy.ops.mesh.select_all(action='TOGGLE')  # Operator
bpy.ops.mesh.select_all(action='TOGGLE')  # Operator
bpy.ops.mesh.select_all(action='TOGGLE')  # Operator
bpy.ops.mesh.select_all(action='TOGGLE')  # Operator
bpy.ops.mesh.select_all(action='TOGGLE')  # Operator
bpy.ops.mesh.select_all(action='TOGGLE')  # Operator
bpy.ops.object.editmode_toggle()  # Operator

# backtrace
/home/user/blender/blender-git/build_linux/bin/blender(BLI_system_backtrace+0x30) [0x555556992270]
/home/user/blender/blender-git/build_linux/bin/blender(+0xa60a41) [0x555555fb4a41]
/lib/x86_64-linux-gnu/libc.so.6(+0x357f0) [0x7ffff12d97f0]
/home/user/blender/blender-git/build_linux/bin/blender(+0x11048cb) [0x5555566588cb]
/home/user/blender/blender-git/build_linux/bin/blender(bvhtree_from_mesh_looptri+0x200) [0x55555665a9b0]
/home/user/blender/blender-git/build_linux/bin/blender(shrinkwrapModifier_deform+0x5f2) [0x555556783f02]
/home/user/blender/blender-git/build_linux/bin/blender(+0x10e5cf0) [0x555556639cf0]
/home/user/blender/blender-git/build_linux/bin/blender(+0x10e6eb0) [0x55555663aeb0]
/home/user/blender/blender-git/build_linux/bin/blender(makeDerivedMesh+0x90) [0x55555663afd0]
/home/user/blender/blender-git/build_linux/bin/blender(BKE_object_handle_data_update+0x4a8) [0x555556733958]
/home/user/blender/blender-git/build_linux/bin/blender(BKE_object_eval_uber_data+0x34) [0x555556733af4]
/home/user/blender/blender-git/build_linux/bin/blender(+0x1452913) [0x5555569a6913]
/home/user/blender/blender-git/build_linux/bin/blender(+0x143e530) [0x555556992530]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x76da) [0x7ffff538a6da]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x5f) [0x7ffff13acd7f]

managed to get it to crash on the locally built blender by tabbing in and out of the base mesh a few times: ``` bpy.ops.object.editmode_toggle() # Operator bpy.ops.object.editmode_toggle() # Operator bpy.ops.object.editmode_toggle() # Operator bpy.ops.object.editmode_toggle() # Operator bpy.ops.object.editmode_toggle() # Operator bpy.ops.mesh.select_all(action='TOGGLE') # Operator bpy.ops.mesh.select_all(action='TOGGLE') # Operator bpy.ops.mesh.select_all(action='TOGGLE') # Operator bpy.ops.mesh.select_all(action='TOGGLE') # Operator bpy.ops.mesh.select_all(action='TOGGLE') # Operator bpy.ops.mesh.select_all(action='TOGGLE') # Operator bpy.ops.mesh.select_all(action='TOGGLE') # Operator bpy.ops.mesh.select_all(action='TOGGLE') # Operator bpy.ops.mesh.select_all(action='TOGGLE') # Operator bpy.ops.object.editmode_toggle() # Operator # backtrace /home/user/blender/blender-git/build_linux/bin/blender(BLI_system_backtrace+0x30) [0x555556992270] /home/user/blender/blender-git/build_linux/bin/blender(+0xa60a41) [0x555555fb4a41] /lib/x86_64-linux-gnu/libc.so.6(+0x357f0) [0x7ffff12d97f0] /home/user/blender/blender-git/build_linux/bin/blender(+0x11048cb) [0x5555566588cb] /home/user/blender/blender-git/build_linux/bin/blender(bvhtree_from_mesh_looptri+0x200) [0x55555665a9b0] /home/user/blender/blender-git/build_linux/bin/blender(shrinkwrapModifier_deform+0x5f2) [0x555556783f02] /home/user/blender/blender-git/build_linux/bin/blender(+0x10e5cf0) [0x555556639cf0] /home/user/blender/blender-git/build_linux/bin/blender(+0x10e6eb0) [0x55555663aeb0] /home/user/blender/blender-git/build_linux/bin/blender(makeDerivedMesh+0x90) [0x55555663afd0] /home/user/blender/blender-git/build_linux/bin/blender(BKE_object_handle_data_update+0x4a8) [0x555556733958] /home/user/blender/blender-git/build_linux/bin/blender(BKE_object_eval_uber_data+0x34) [0x555556733af4] /home/user/blender/blender-git/build_linux/bin/blender(+0x1452913) [0x5555569a6913] /home/user/blender/blender-git/build_linux/bin/blender(+0x143e530) [0x555556992530] /lib/x86_64-linux-gnu/libpthread.so.0(+0x76da) [0x7ffff538a6da] /lib/x86_64-linux-gnu/libc.so.6(clone+0x5f) [0x7ffff13acd7f] ```

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2017-09-19 08:57:45 +02:00

Hard to reproduce, and don't see anything wrong in depsgraph itself (all relations are correct). Suspect some threading conflict when building shrinkwrap target BVH. Could take a while to investigate :(

At the meantime, try running blender with --debug-depsgraph-no-threads command line argument and see if that fixes anything.

Hard to reproduce, and don't see anything wrong in depsgraph itself (all relations are correct). Suspect some threading conflict when building shrinkwrap target BVH. Could take a while to investigate :( At the meantime, try running blender with `--debug-depsgraph-no-threads` command line argument and see if that fixes anything.

the --debug-depsgraph-no-threads does make it more stable definitely. The other thing we noticed was that if we triangulate the base mesh it seems to be a lot more stable as well. Not sure if that is of help at all with the bug hunting

the --debug-depsgraph-no-threads does make it more stable definitely. The other thing we noticed was that if we triangulate the base mesh it seems to be a lot more stable as well. Not sure if that is of help at all with the bug hunting

What do you mean by "more stable"? Does the same exact crash happens?

What do you mean by "more stable"? Does the same exact crash happens?

In my brief testing I cant make it crash with either fix, but I am unsure if its just less often now or whether it fixed the issue.

In my brief testing I cant make it crash with either fix, but I am unsure if its just less often now or whether it fixed the issue.

This issue was referenced by 1a4442b3db

This issue was referenced by 1a4442b3dbadd685b9c6a70fa9694748b2a6e2d3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52823
No description provided.